--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,7 +7,7 @@
     width: 92px;
   }
   #header .container .header-box .main-nav ul li a {
-    padding: 12px 16px;
+    /*padding: 12px 16px;*/
   }
   #header .container .header-box .main-nav .btn-download-app {
     padding: 8px 16px;
