--- a/css/menu.css
+++ b/css/menu.css
@@ -42,6 +42,19 @@
     transition: 0.1s;
 }
 
+.mobile-nav>ul>li>ul {
+    padding-left: 12px;
+    /*max-height: 0;
+    transition: max-height 1s ease-out;
+    overflow: hidden;*/
+    display: none;
+}
+
+/*.mobile-nav>ul>li:hover ul {
+    transition: max-height 2s ease-in;
+    max-height: 500px;
+}*/
+
 .mobile-nav * {
     margin: 0;
     padding: 0;
@@ -58,18 +71,19 @@
     font-size: 16px;
     display: flex;
 }
+
 .mobile-nav a img {
     margin-right: 12px;
 }
 
 .mobile-nav a:hover,
-.mobile-nav .active > a,
-.mobile-nav li:hover > a {
+.mobile-nav .active>a,
+.mobile-nav li:hover>a {
     color: #e14925;
     text-decoration: none;
 }
 
-.mobile-nav .drop-down > a:after {
+.mobile-nav .drop-down>a:after {
     font-family: "Ionicons";
     content: "\f35f";
     padding-left: 10px;
@@ -79,11 +93,11 @@
     font-size: 18px;
 }
 
-.mobile-nav .active.drop-down > a:after {
+.mobile-nav .active.drop-down>a:after {
     content: "\f365";
 }
 
-.mobile-nav .drop-down > a {
+.mobile-nav .drop-down>a {
     padding-right: 35px;
 }
 
@@ -149,7 +163,7 @@
     color: #000000;
 }
 
-@media (min-width: 1250px) {
+@media (min-width: 1200px) {
 
     .mobile-nav {
         display: none;
@@ -171,10 +185,10 @@
     .back-to-top {
         right: 20px !important;
         bottom: 10px !important;
-    }   
+    }
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1200px) {
 
     .mobile-nav {
         display: block;
@@ -186,13 +200,8 @@
 
 }
 
-@media(max-width:500px){
-    .hero-sc img.hero-phone{
+@media(max-width:500px) {
+    .hero-sc img.hero-phone {
         padding: 10px 60px;
     }
 }
-
-
-
-
-
