--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -26,7 +26,7 @@ $gray: #e7edf8;
                         li {
 
                             a {
-                                padding: 12px 16px;
+                                /*padding: 12px 16px;*/
 
                             }
                         }
